----------------------------------
Version 1.3.2
(unreleased)
----------------------------------
- Fixed energy HUD scale affecting other mod HUDs



----------------------------------
Version 1.3.1
2014-12-16
----------------------------------
- Updated Capacitor Pack recipes for the new version of Ender IO



----------------------------------
Version 1.3.0
2014-12-06
----------------------------------
- Added 3D armor models for the jetpacks. Many thanks to Cybercat and dand0 for providing a model. (There is a config option to switch back to the boring old flat jetpacks.)
- Added a configurable speed boost when sprinting while flying forward
- Adding or removing armor is now done using a crafting grid. This allows armored jetpacks to be auto-crafted. Note that removing armor will only properly return plating if done by a player.
- Removed armoring NEI handlers as they are no longer needed
- Emergency hover mode can be toggled by switching hover mode while sneaking
- Added /simplyjetpacks_switch (/sjs) command to switch emergency hover and chargers, and a config option to disable secondary actions when sneaking and pressing the toggling keys
- Sneaking while flying slows down sideways flight to half speed
- Jetpacks and Flux Packs are now on by default upon creation
- Sneak-right clicking a jetpack on a Zombie or a Skeleton will force it to wear and use it
- Fixed armored jetpacks absorbing much more damage than intended. This was making players invincible when they were also wearing other pieces of armor
- Fixed engine/hover controls not working when bound to mouse buttons
- Updated CoFH Energy API, and actually include the whole package this time *cough*
- RIP, resource pack authors



----------------------------------
Version 1.2.0
2014-10-18
----------------------------------
- Added full EnderIO support! This includes EnderIO versions of the jetpacks, flux packs and components.
- Integration with TE or EIO can be disabled/enabled in the config